--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^4.1.0",
+    "@testing-library/dom": "^6.8.1",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/svelte": "^1.9.0",
+    "cypress": "^3.4.1",
     "generate-changelog": "^1.8.0",
+    "jest": "^24.9.0",
+    "jest-transform-svelte": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
@@ -13,6 +20,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "cypress-svelte-unit-test": "^1.5.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
@@ -23,6 +31,23 @@
     "start:dev": "sirv public --single --dev",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags"
-  }
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
+    "test": "jest src",
+    "test:watch": "npm run test -- --watch"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.svelte$": "jest-transform-svelte"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "svelte"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
+  },
+  "setupFilesAfterEnv": [
+    "@testing-library/jest-dom/extend-expect"
+  ]
 }
