--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@babel/preset-env": "^7.6.3",
     "@testing-library/dom": "^6.8.1",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/svelte": "^1.9.0",
