--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
     "generate-changelog": "^1.8.0",
+    "gh-pages": "^2.1.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-analyzer": "^3.2.1",
@@ -60,6 +61,6 @@
     "pkg:dev": "npm run build && npm publish --tag dev",
     "pkg:prod": "npm run build && npm publish --tag",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook && gh-pages -d storybook-static"
   }
 }
