--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@storybook/addon-a11y": "^5.2.5",
     "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
+    "@storybook/addon-notes": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/svelte": "^5.2.5",
     "autoprefixer": "^9.7.0",
