--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,24 +1,19 @@
 name: Node CI
-
-on: [push]
-
+on: [push, pull_request]
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  Tests:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
-
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm test
+    - run: npm install
+    - run: npm test
       env:
         CI: true
