fix(button): unit tests

--- a/package.json
+++ b/package.json
@@ -28,13 +28,8 @@
     "svelte": "^3.4.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.6.3",
-    "@testing-library/dom": "^6.8.1",
-    "@testing-library/jest-dom": "^4.1.2",
-    "@testing-library/svelte": "^1.9.0",
-    "jest": "^24.9.0",
-    "jest-transform-svelte": "^2.1.0",
     "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@storybook/addon-a11y": "^5.2.5",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-knobs": "^5.2.5",
@@ -42,10 +37,16 @@
     "@storybook/addon-notes": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/svelte": "^5.2.5",
+    "@testing-library/dom": "^6.8.1",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/svelte": "^1.9.0",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.10.0",
     "generate-changelog": "^1.8.0",
     "gh-pages": "^2.1.1",
+    "jest": "^24.9.0",
+    "jest-transform-svelte": "^2.1.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
