build(travi): initiate with coveralls

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/svelte": "^1.9.0",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "coveralls": "^3.0.7",
     "enzyme": "^3.10.0",
     "generate-changelog": "^1.8.0",
     "gh-pages": "^2.1.1",
@@ -70,6 +71,7 @@
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
     "test": "jest src",
     "test:watch": "npm run test -- --watch",
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "pkg:dev": "npm run build && npm publish --tag dev",
     "pkg:prod": "npm run build && npm publish --tag",
     "storybook": "start-storybook -p 6006",
