--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script: echo "Running tests against $(node -v)..."
 
 jobs:
   include:
+    - stage: Unit test
+      script: npm test
     - stage: Produce Coverage
       node_js: node
       script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
