--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svea",
-  "version": "1.0.0rc11",
+  "version": "1.0.1",
   "description": "Component library",
   "main": "dist/svea.js",
   "module": "dist/svea.module.js",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@storybook/addon-a11y": "^5.2.5",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-knobs": "^5.2.5",
@@ -36,10 +37,17 @@
     "@storybook/addon-notes": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/svelte": "^5.2.5",
+    "@testing-library/dom": "^6.8.1",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/svelte": "^1.9.0",
     "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
+    "coveralls": "^3.0.7",
+    "enzyme": "^3.10.0",
     "generate-changelog": "^1.8.0",
     "gh-pages": "^2.1.1",
+    "jest": "^24.9.0",
+    "jest-transform-svelte": "^2.1.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
@@ -61,6 +69,9 @@
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
+    "test": "jest src",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "pkg:dev": "npm run build && npm publish --tag dev",
     "pkg:prod": "npm run build && npm publish --tag",
     "storybook": "start-storybook -p 6006",
